jpa approach implemented + tests for jdbc