@@ -10,18 +10,17 @@ import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 import backend.academy.dto.AddLinkRequest;
+import backend.academy.dto.LinkResponse;
 import backend.academy.dto.ListLinksResponse;
+import backend.academy.scrapper.dao.ChatDao;
+import backend.academy.scrapper.dao.FilterDao;
+import backend.academy.scrapper.dao.LinkDao;
+import backend.academy.scrapper.dao.TagDao;
 import backend.academy.scrapper.exc.ChatAlreadyExistsException;
 import backend.academy.scrapper.exc.ChatNotFoundException;
-import backend.academy.scrapper.exc.LinkAlreadyExistsException;
 import backend.academy.scrapper.exc.LinkNotFoundException;
-import backend.academy.scrapper.model.Chat;
-import backend.academy.scrapper.model.LinkInfo;
 import backend.academy.scrapper.model.dto.Link;
-import backend.academy.scrapper.repository.MapChatRepository;
-import backend.academy.scrapper.repository.OldLinkRepository;
 import backend.academy.scrapper.service.ChatService;
-import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import org.junit.jupiter.api.BeforeEach;
@@ -32,80 +31,85 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 @ExtendWith(MockitoExtension.class)
-class ChatEntityServiceTest {
-    private final Long chatId = 1L;
-    private final String linkUrl = "http://example.com";
-    private final Long linkId = 100L;
+class ChatServiceTest {
+    @Mock
+    private ChatDao chatDao;
 
     @Mock
-    private MapChatRepository mapChatRepository;
+    private LinkDao linkDao;
 
     @Mock
-    private OldLinkRepository oldLinkRepository;
+    private TagDao tagDao;
+
+    @Mock
+    private FilterDao filterDao;
 
     @InjectMocks
     private ChatService chatService;
 
-    private Chat chat;
+    private final Long chatId = 1L;
+    private final String linkUrl = "http://example.com";
+    private final Long linkId = 100L;
     private Link link;
-    private LinkInfo linkInfo;
+    private LinkResponse linkResponse;
 
     @BeforeEach
     void setUp() {
         link = new Link(linkId, linkUrl, null);
-        linkInfo = new LinkInfo(linkId, Collections.emptyList(), Collections.emptyList());
-        chat = new Chat(chatId, new ArrayList<>(List.of(linkInfo)));
+        linkResponse = new LinkResponse(linkId, linkUrl, List.of("tag"), List.of("filter"));
     }
 
     @Test
     void registerChat_ShouldRegisterChat_WhenChatDoesNotExist() {
-        when(mapChatRepository.getChat(chatId)).thenReturn(null);
+        when(chatDao.existsChat(chatId)).thenReturn(false);
 
         chatService.registerChat(chatId);
 
-        verify(mapChatRepository, times(1)).addChat(any(Chat.class));
+        verify(chatDao, times(1)).addChat(chatId);
     }
 
     @Test
     void registerChat_ShouldThrowException_WhenChatAlreadyExists() {
-        when(mapChatRepository.getChat(chatId)).thenReturn(chat);
+        when(chatDao.existsChat(chatId)).thenReturn(true);
 
         assertThatThrownBy(() -> chatService.registerChat(chatId)).isInstanceOf(ChatAlreadyExistsException.class);
 
-        verify(mapChatRepository, never()).addChat(any(Chat.class));
+        verify(chatDao, never()).addChat(any(Long.class));
     }
 
     @Test
     void deleteChat_ShouldDeleteChat_WhenChatExists() {
-        when(mapChatRepository.removeChat(chatId)).thenReturn(true);
+        when(chatDao.removeChat(chatId)).thenReturn(true);
 
         chatService.deleteChat(chatId);
 
-        verify(mapChatRepository, times(1)).removeChat(chatId);
+        verify(chatDao, times(1)).removeChat(chatId);
     }
 
     @Test
     void deleteChat_ShouldThrowException_WhenChatDoesNotExist() {
-        when(mapChatRepository.removeChat(chatId)).thenReturn(false);
+        when(chatDao.removeChat(chatId)).thenReturn(false);
 
         assertThatThrownBy(() -> chatService.deleteChat(chatId)).isInstanceOf(ChatNotFoundException.class);
     }
 
     @Test
     void getAllLinksFromChat_ShouldReturnLinks_WhenChatExists() {
-        when(mapChatRepository.getChat(chatId)).thenReturn(chat);
-        when(oldLinkRepository.getLink(linkId)).thenReturn(link);
+        when(chatDao.existsChat(chatId)).thenReturn(true);
+        when(linkDao.findLinksByChatId(chatId)).thenReturn(List.of(linkId));
+        when(linkDao.getLinkUrlById(linkId)).thenReturn(linkUrl);
+        when(filterDao.getFiltersByChatIdAndLinkId(chatId, linkId)).thenReturn(linkResponse.filters());
+        when(tagDao.getAllTagsByChatIdAndLinkId(chatId, linkId)).thenReturn(linkResponse.tags());
 
         ListLinksResponse response = chatService.getAllLinksFromChat(chatId);
 
-        assertThat(1).isEqualTo(response.size());
-        assertThat(1).isEqualTo(response.links().size());
-        assertThat(linkUrl).isEqualTo(response.links().getFirst().url());
+        assertThat(response.size()).isEqualTo(1);
+        assertThat(response.links()).containsExactly(linkResponse);
     }
 
     @Test
     void getAllLinksFromChat_ShouldThrowException_WhenChatNotFound() {
-        when(mapChatRepository.getChat(chatId)).thenReturn(null);
+        when(chatDao.existsChat(chatId)).thenReturn(false);
 
         assertThatThrownBy(() -> chatService.getAllLinksFromChat(chatId)).isInstanceOf(ChatNotFoundException.class);
     }
@@ -113,30 +117,36 @@ class ChatEntityServiceTest {
     @Test
     void addLinkToChat_ShouldAddLink_WhenNewLink() {
         Link newLink = new Link(101L, "https://new_example.com", null);
-        when(mapChatRepository.getChat(chatId)).thenReturn(chat);
-        when(oldLinkRepository.getLinkByUrl(newLink.url())).thenReturn(null);
-        when(oldLinkRepository.addLink(newLink.url())).thenReturn(newLink);
+        when(chatDao.existsChat(chatId)).thenReturn(true);
+        when(linkDao.getLinkIdByUrl(newLink.url())).thenReturn(null);
+        when(linkDao.addLink(newLink.url())).thenReturn(newLink.id());
 
         chatService.addLinkToChat(
                 chatId, new AddLinkRequest(newLink.url(), Collections.emptyList(), Collections.emptyList()));
 
-        verify(mapChatRepository, times(1)).updateChat(eq(chatId), any(Chat.class));
+        verify(tagDao, never()).addTag(any(Long.class), any(Long.class), any(String.class));
+        verify(filterDao, never()).addFilter(any(Long.class), any(Long.class), any(String.class));
+        verify(linkDao, times(1)).addLinkToChat(eq(chatId), eq(newLink.id()));
     }
 
     @Test
-    void addLinkToChat_ShouldThrowException_WhenLinkAlreadyExists() {
-        when(mapChatRepository.getChat(chatId)).thenReturn(chat);
-        when(oldLinkRepository.getLinkByUrl(linkUrl)).thenReturn(link);
+    void addLinkToChat_ShouldAddLink_WhenLinkAlreadyExists() {
+        Link newLink = new Link(101L, "https://new_example.com", null);
+        when(chatDao.existsChat(chatId)).thenReturn(true);
+        when(linkDao.getLinkIdByUrl(newLink.url())).thenReturn(newLink.id());
 
-        assertThatThrownBy(() -> chatService.addLinkToChat(
-                        chatId, new AddLinkRequest(linkUrl, Collections.emptyList(), Collections.emptyList())))
-                .isInstanceOf(LinkAlreadyExistsException.class)
-                .hasMessageContaining(chatId.toString(), linkUrl);
+        chatService.addLinkToChat(
+                chatId, new AddLinkRequest(newLink.url(), Collections.emptyList(), Collections.emptyList()));
+
+        verify(linkDao, never()).addLink(any(String.class));
+        verify(tagDao, never()).addTag(any(Long.class), any(Long.class), any(String.class));
+        verify(filterDao, never()).addFilter(any(Long.class), any(Long.class), any(String.class));
+        verify(linkDao, times(1)).addLinkToChat(eq(chatId), eq(newLink.id()));
     }
 
     @Test
     void addLinkToChat_ShouldThrowException_WhenChatNotFound() {
-        when(mapChatRepository.getChat(chatId)).thenReturn(null);
+        when(chatDao.existsChat(chatId)).thenReturn(false);
 
         assertThatThrownBy(() -> chatService.addLinkToChat(
                         chatId, new AddLinkRequest(linkUrl, Collections.emptyList(), Collections.emptyList())))
@@ -145,18 +155,20 @@ class ChatEntityServiceTest {
 
     @Test
     void deleteLinkFromChat_ShouldDeleteLink_WhenLinkExists() {
-        when(mapChatRepository.getChat(chatId)).thenReturn(chat);
-        when(oldLinkRepository.getLinkByUrl(linkUrl)).thenReturn(link);
-        when(mapChatRepository.removeLinkFromChatById(chatId, linkId)).thenReturn(true);
+        when(chatDao.existsChat(chatId)).thenReturn(true);
+        when(linkDao.getLinkIdByUrl(linkUrl)).thenReturn(linkId);
+        when(linkDao.removeLinkFromChatById(chatId, linkId)).thenReturn(true);
 
         chatService.deleteLinkFromChat(chatId, link.url());
 
-        verify(mapChatRepository, times(1)).removeLinkFromChatById(chatId, linkId);
+        verify(linkDao, times(1)).removeLinkFromChatById(chatId, linkId);
+        verify(tagDao, times(1)).removeAllTagsFromChatByLinkId(chatId, linkId);
+        verify(filterDao, times(1)).removeAllFiltersFromChatByLinkId(chatId, linkId);
     }
 
     @Test
     void deleteLinkFromChat_ShouldThrowException_WhenChatDoesNotExist() {
-        when(mapChatRepository.getChat(chatId)).thenReturn(null);
+        when(chatDao.existsChat(chatId)).thenReturn(false);
 
         assertThatThrownBy(() -> chatService.deleteLinkFromChat(chatId, linkUrl))
                 .isInstanceOf(ChatNotFoundException.class);
@@ -164,8 +176,8 @@ class ChatEntityServiceTest {
 
     @Test
     void deleteLinkFromChat_ShouldThrowException_WhenLinkDoesNotExist() {
-        when(mapChatRepository.getChat(chatId)).thenReturn(chat);
-        when(oldLinkRepository.getLinkByUrl(linkUrl)).thenReturn(null);
+        when(chatDao.existsChat(chatId)).thenReturn(true);
+        when(linkDao.getLinkIdByUrl(linkUrl)).thenReturn(null);
 
         assertThatThrownBy(() -> chatService.deleteLinkFromChat(chatId, linkUrl))
                 .isInstanceOf(LinkNotFoundException.class);
@@ -173,9 +185,9 @@ class ChatEntityServiceTest {
 
     @Test
     void deleteLinkFromChat_ShouldThrowException_WhenLinkNotInChat() {
-        when(mapChatRepository.getChat(chatId)).thenReturn(chat);
-        when(oldLinkRepository.getLinkByUrl(linkUrl)).thenReturn(link);
-        when(mapChatRepository.removeLinkFromChatById(chatId, linkId)).thenReturn(false);
+        when(chatDao.existsChat(chatId)).thenReturn(true);
+        when(linkDao.getLinkIdByUrl(linkUrl)).thenReturn(linkId);
+        when(linkDao.removeLinkFromChatById(chatId, linkId)).thenReturn(false);
 
         assertThatThrownBy(() -> chatService.deleteLinkFromChat(chatId, linkUrl))
                 .isInstanceOf(LinkNotFoundException.class)
@@ -185,7 +197,7 @@ class ChatEntityServiceTest {
     @Test
     void getAllLinks() {
         List<Link> expectedLinks = List.of(link);
-        when(oldLinkRepository.getAllLinks()).thenReturn(expectedLinks);
+        when(linkDao.getAllLinks()).thenReturn(expectedLinks);
 
         List<Link> links = chatService.getAllLinks();
 
@@ -194,7 +206,7 @@ class ChatEntityServiceTest {
 
     @Test
     void updateLinkLastModified_ShouldThrowException_WhenLinkDoesNotExist() {
-        when(oldLinkRepository.getLink(linkId)).thenReturn(null);
+        when(linkDao.getLinkUrlById(linkId)).thenReturn(null);
 
         assertThatThrownBy(() -> chatService.updateLinkLastModifiedAt(linkId, null))
                 .isInstanceOf(LinkNotFoundException.class);
